fixed mavan javadoc configuration